--- a/package.json
+++ b/package.json
@@ -1,22 +1,30 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "mii-libra-api",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "A graphql api for interacting with libra blockchain",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "autsada thummatipagul",
   "dependencies": {
+    "@contentful/rich-text-types": "^13.4.0",
+    "babel-plugin-styled-components": "^1.10.6",
+    "dotenv": "^8.2.0",
     "gatsby": "^2.18.3",
     "gatsby-image": "^2.2.33",
+    "gatsby-plugin-layout": "^1.1.15",
     "gatsby-plugin-manifest": "^2.2.29",
     "gatsby-plugin-offline": "^3.0.23",
     "gatsby-plugin-react-helmet": "^3.1.15",
     "gatsby-plugin-sharp": "^2.3.3",
+    "gatsby-plugin-styled-components": "^3.1.13",
+    "gatsby-remark-images": "^3.1.33",
+    "gatsby-source-contentful": "^2.1.63",
     "gatsby-source-filesystem": "^2.1.38",
     "gatsby-transformer-sharp": "^2.3.5",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "styled-components": "^4.4.1"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
